<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.anuradhakelum.istqbmockexam.MainActivity"
    tools:showIn="@layout/app_bar_main">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/Constraint01"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/Constraint02"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ScrollView
                android:id="@+id/scrollView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.452">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.v7.widget.CardView
                        android:id="@+id/cardview1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        app:cardBackgroundColor="@color/background"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="4dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/cardTextView1"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="8dp"
                                android:gravity="center"
                                android:text="@string/wellcome"
                                android:textSize="40sp"/>

                            <TextView
                                android:id="@+id/cardtextView2"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/cardTextView1"
                                android:layout_margin="8dp"
                                android:gravity="center"
                                android:text="@string/description"
                                android:textAllCaps="true" />
                        </RelativeLayout>


                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:id="@+id/cardview2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        app:cardBackgroundColor="@color/background"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/cardview1"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="4dp">

                        <android.support.constraint.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/cardtextView3"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="8dp"
                                android:gravity="center"
                                android:text="@string/startExam"
                                android:textAllCaps="true"
                                app:layout_constraintBottom_toTopOf="@+id/button"
                                app:layout_constraintEnd_toStartOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <Button
                                android:id="@+id/button"
                                android:layout_width="250dp"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/cardtextView3"
                                android:layout_margin="8dp"
                                android:elevation="6dp"
                                android:background="@drawable/mybutton"
                                android:onClick="startExamButton"
                                android:text="Start"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/cardtextView3" />
                        </android.support.constraint.ConstraintLayout>
                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:id="@+id/cardview3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        app:cardBackgroundColor="@color/background"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/cardview2"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="4dp">

                        <android.support.constraint.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/cardtextView4"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="8dp"
                                android:gravity="center"
                                android:text="@string/startChapterExam"
                                android:textAllCaps="true"
                                app:layout_constraintBottom_toTopOf="@+id/button2"
                                app:layout_constraintEnd_toStartOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <Button
                                android:id="@+id/button2"
                                android:layout_width="250dp"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/cardtextView4"
                                android:layout_margin="16dp"
                                android:background="@drawable/mybutton"
                                android:gravity="center"
                                android:onClick="mockExambuttonClick"
                                android:padding="8dp"
                                android:elevation="6dp"
                                android:text="Select Chapter"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/cardtextView4" />
                        </android.support.constraint.ConstraintLayout>
                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:id="@+id/cardview4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/cardview3"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="4dp">

                        <android.support.constraint.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="4dp">

                            <TextView
                                android:id="@+id/text4"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="Guess answers to the questions which are selected from all the chapters"
                                android:textAllCaps="true"
                                android:layout_margin="8dp"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintBottom_toTopOf="@id/buttonguesss"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"/>

                            <Button
                                android:id="@+id/buttonguesss"
                                android:layout_width="250dp"
                                android:layout_height="wrap_content"
                                android:layout_margin="8dp"
                                android:elevation="6dp"
                                android:background="@drawable/mybutton"
                                android:onClick="guessAnswer"
                                android:text="GUESS ANSWERS"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@id/text4" />


                        </android.support.constraint.ConstraintLayout>
                    </android.support.v7.widget.CardView>

                    <android.support.v7.widget.CardView
                        android:id="@+id/cardview5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="16dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/cardview4"
                        app:cardCornerRadius="10dp"
                        app:cardElevation="4dp">

                        <android.support.constraint.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="4dp">

                            <TextView
                                android:id="@+id/text5"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_margin="8dp"
                                android:gravity="center"
                                android:text="Guess answers to the questions which are selected from selected chapter"
                                android:textAllCaps="true"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintBottom_toTopOf="@id/help"/>

                            <Button
                                android:id="@+id/help"
                                android:layout_width="250dp"
                                android:layout_height="wrap_content"
                                android:layout_margin="8dp"
                                android:layout_marginBottom="8dp"
                                android:background="@drawable/mybutton"
                                android:onClick="guesschapter"
                                android:padding="8dp"
                                android:elevation="6dp"
                                android:text="GUESS BY CHAPTER"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@id/text5" />

                        </android.support.constraint.ConstraintLayout>
                    </android.support.v7.widget.CardView>

                </android.support.constraint.ConstraintLayout>
            </ScrollView>
        </android.support.constraint.ConstraintLayout>
        <android.support.constraint.ConstraintLayout
            android:id="@+id/Constraint02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/Constraint01"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <com.google.android.gms.ads.AdView
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adView06"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                ads:adSize="SMART_BANNER"
                ads:adUnitId="ca-app-pub-2500224556487339/4178313505"
                ads:layout_constraintBottom_toBottomOf="parent"
                ads:layout_constraintEnd_toEndOf="parent"
                ads:layout_constraintStart_toStartOf="parent"
                ads:layout_constraintTop_toTopOf="parent"></com.google.android.gms.ads.AdView>



        </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>
